tests/golden/fixtures/syntax-symbolic-subscripts-err-non-array-field-index/expected.err
Error: overlay field 'foo.idx' is not an array
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-non-array-field-index/input.k65:6:3 ]
   │
 6 │   lda foo.idx[1]
   │   ───────┬──────  
   │          ╰──────── here
───╯

